# RedPandaEngine

./: .gitignore  LICENSE.txt  README.md  RedPandaEngine.sln
RedPandaEngine/: CMakeLists.txt  CSharp.h  CompiledLanguage.h  DEVICE.h  FunctionTools.h  FunctionTools64.asm  FunctionTools86.asm  Graphics.cpp  Graphics.h  Java.h  Kinect.h  Language_Manager.h  Lovense_Device.h  Lua.h  Math.h  Physics.cpp  Physics.h  Python.h  RedPandaEngine.cpp  RedPandaEngine.vcxproj  RedPandaEngine.vcxproj.filters  Scripting_Language.h  Scripting_Language_Manager.h  TextRenderer.cpp  TextRenderer.hpp  ToyTypes.json  VirtualMachineLanguage.h  imgui.ini  packages.config  util.cpp  util.h
RedPandaEngine/Assets/: base.dae
RedPandaEngine/Devices/Lovense/: Lovense_Device.h  ToyTypes.json
RedPandaEngine/Documentation/.obsidian/: graph.json
RedPandaEngine/Documentation/Modding/: Modding.md
RedPandaEngine/Events/: Events.hpp
RedPandaEngine/Graphics/: Graphics.cpp  Graphics.h
RedPandaEngine/Main/: CMakeLists.txt  RedPandaEngine.cpp
RedPandaEngine/Physics/: Physics.cpp
RedPandaEngine/Physics/PhysicsObject/: PhysicsObject.cpp  PhysicsObject.hpp
RedPandaEngine/Physics/Reality/: Reality.cpp  Reality.hpp
RedPandaEngine/Scripting/: FunctionTools.h  FunctionTools64.asm  Language.h
RedPandaEngine/Scripting/Languages/: CSharp.h  Java.h  Lua.h
RedPandaEngine/Utility/: util.cpp  util.h
RedPandaEngineDocs/.obsidian/: workspace  workspace.json
RedPandaEngineDocs/Documentation/: The Redpanda Engine.md
RedPandaEngineDocs/Scripting Languages/: Scripting Languages.md
(+9 files in other folders)
